--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,25 @@ ul
 {
     list-style: none;
 }
+.button1
+{
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+    border: 1px solid white;
+    padding: 18px 50px;
+    display: inline-block;
+    border-radius: 3px;
+    text-decoration: none;
+    margin-top: 20px;
+    transition: all 0.3s ease-in 0s;
+    background: transparent;
+}
+.button1:hover
+{
+    background: white;
+    color: #001449;
+}
 /*NAVBAR*/
 .navbar
 {
@@ -81,28 +100,7 @@ ul
     text-transform: uppercase;
     margin-bottom: 20px;
 }
-#about .heading h3
-{
-    color: white;
-}
-.button1
-{
-    font-weight: bold;
-    color: white;
-    text-transform: uppercase;
-    border: 1px solid white;
-    padding: 18px 50px;
-    display: inline-block;
-    border-radius: 3px;
-    text-decoration: none;
-    margin-top: 20px;
-    transition: all 0.3s ease-in 0s;
-}
-.button1:hover
-{
-    background: white;
-    color: #001449;
-}
+
 /*SKILLS*/
 #skills .heading h2
 {
@@ -275,6 +273,70 @@ ul
     margin-bottom: 20px;
     font-weight: normal;
 }
+/*PORTFOLIO*/
+#portfolio
+{
+    background-color: #001449;
+}
+#portfolio .heading h2
+{
+    color: white;
+}
+#portfolio img
+{
+    width: 100%;
+    height: 100%;
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+}
+#portfolio img:hover
+{
+    filter: none;
+    -webkit-filter: none;
+}
+#portfolio .col-md-4
+{
+    margin-bottom: 20px;
+}
+/*CERTIFICATIONS*/
+#certifications .heading h2
+{
+    color: #001449;
+}
+/*CONTACT*/
+#contact
+{
+    background-color: #001449;
+}
+#contact .heading h2
+{
+    color: white;
+}
+#contact-form {
+    font-size: 20px;
+    color: #fff;
+}
+.form-control {
+    height: 50px;
+    font-size: 18px;
+}
+#contact-form input[type=submit] {
+    margin: 40px auto 0px;
+    display: block;
+}
+.comments {
+    font-style: italic;
+    font-size: 18px;
+    color: #fff;
+    height: 25px
+}
+#contact-form .thank-you {
+    text-align: center;
+    margin-top: 15px;
+    font-weight: bold;
+    font-size: 22px;
+}
+
 /*FOOTER*/
 footer
 {
